# dicom-contour-to-nifti-mask

./: .gitignore  README.md  pyproject.toml
.github/workflows/: check.yml
dicom_contour_to_nifti_mask/: klad.ipynb  rtstruct_to_nifti.ipynb
tests/: test_sanity_check.py
