[tool.poetry]
name = "dicom-contour-to-nifti-mask"
version = "2024.0.0"
description = ""
authors = ["Datacation"]
packages = [{ include = "dicom_contour_to_nifti_mask" }]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
rt-utils = "^1.2.7"
matplotlib = "^3.9.3"
platipy = "^0.7.2"
nibabel = "^5.3.2"

[tool.poetry.scripts]
dicom-contour-to-nifti-mask = "dicom_contour_to_nifti_mask.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"